force-app/main/default/objects/pymtTest__Invoice_Line_Item__c/pymtTest__Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line items on an invoice, linked to Order Products</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>ILI-{0000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>