force-app/main/default/objects/pymtTest__Invoice_Line_Item__c/fields/pymtTest__Description__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Description__c</fullName>
    <description>Description of the line item</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>