force-app/main/default/objects/pymtTest__Invoice_Line_Item__c/fields/pymtTest__Invoice__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Invoice__c</fullName>
    <description>The invoice this line item belongs to</description>
    <label>Invoice</label>
    <referenceTo>pymtTest__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>