force-app/main/default/objects/pymtTest__Invoice_Line_Item__c/fields/pymtTest__Quantity__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Quantity of the item</description>
    <label>Quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>