force-app/main/default/objects/pymtTest__Invoice_Line_Item__c/fields/pymtTest__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Total_Amount__c</fullName>
    <description>Total amount for this line item (Quantity x Unit Price)</description>
    <formula>pymtTest__Quantity__c * pymtTest__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>