force-app/main/default/objects/pymtTest__Invoice_Line_Item__c/fields/pymtTest__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>pymtTest__Unit_Price__c</fullName>
    <description>Price per unit</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>